syntax = "proto3";

option java_package = "joshelser.proto";

message SimpleRequest {
    string message = 1;
}

message SimpleResponse {
    string message = 1;
}

service SimpleService {
    rpc Simple(SimpleRequest) returns (SimpleResponse);
}